--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
   "author": "QFNU ACE Team",
   "license": "MIT",
   "devDependencies": {
-    "concurrently": "^9.2.1"
+    "@types/node": "^25.0.3",
+    "concurrently": "^9.2.1",
+    "typescript": "^4.9.5"
   },
   "engines": {
     "node": ">=16.0.0",
